2007-11-05:
	* src/stash.c(_pam_krb5_stash_chown_keyring): add, to make sure that
	keyrings we create for the user can actually be modified by the user
	after the session is opened (spotted by Michael Calmer)

2007-10-31:
	* src/sly.c(_pam_krb5_sly_maybe_refresh): note that we stored creds
	when we do so for non-FILE ccaches, so that we don't forget to fetch
	new tokens if we need to do so.

2007-10-26:
	* src/sly.c(sly_v5): only free the ccache principal name if the call
	to retrieve it succeeded.
	* src/sly.c(_pam_krb5_sly_maybe_refresh): debug log when we decide
	to do things.  Don't bother trying to refresh an unset KRB5CCNAME.
	* src/shmem.c: correctly check the value returned of shmat() in
	the place where it was being done wrong.
	* src/v5.c: change internally-used ccaches from FILE: to MEMORY:

2007-10-26:
	* src/stash.c(_pam_krb5_stash_cc_copy): don't nuke the new ccache
	on failure iterating it, the parent will for any error.
	* src/stash.c: obey the ccname_template when we clone for the user,
	which is the only time it matters anyway.

2007-10-25:
	* src/harness.c: use the PAM environment when running commands

2007-10-23:
	* src/log.c: use the AUTHPRIV facility, when defined, else AUTH,
	else the default.

2007-09-05:
	* src/v5.c(v5_passwd_error_message): tweak some error text to
	hopefully make more sense to people (#230438)

2007-08-15:
	* src/v4.c: if we fail to open the ticket file with TKT_FIL_ACC,
	debug log the file's permissions and our process's identity

2007-08-02:
	* src/v4.c: warn when an fchown() fails, and don't try to give away
	our file; that's for later
	* src/pam_krb5.5.in,src/pam_krb5.8.in: note that "tokens" is
	unnecessary if the calling application was written correctly.
	* src/pam_krb5.8.in: reintroduce a missing line.
	* COPYING: be more explicit about which BSD license we mean

2007-07-27:
	* src/v5.c: fix v5_check_initialized_pwc() with Heimdal
	* src/v4.c: fix compilation for no-krb4-support cases, avoid cloning